wiki/skins/custard/CSS/custard.css
/* General */
html, body {
    margin: 0;
    padding: 0;
}

body {
    background: #3d9ec8;
    font-family: 'Segoe UI', sans-serif;
}

/* Toolbar */
#toolbar {
    position: fixed;
    width: 100%;
    height: 30px;
    background: white;
    top: 0;
    z-index: 2;
}

#toolbar .toggle {
    margin: 30px auto 0;
    background: white;
    width: 30px;
    height: 15px;
    border-radius: 0 0 5px 5px;
    cursor: pointer;
    transition: background 200ms linear;
}

#toolbar .toggle .text {
    position: absolute;
    width: 30px;
    height: 15px;
    text-align: center;
    color: #BBB;
    line-height: 10px;
}

#toolbar .toggle .invert {
    position: absolute;
    width: 40px;
    height: 5px;
    margin-left: -5px;
    overflow: hidden;
}

#toolbar .toggle .invert::before {
    content: "";
    position: absolute;
    margin: -5px 0 0 -5px;
    width: 5px;
    height: 5px;
    background: transparent;
    border: 5px solid white;
    border-top-right-radius: 10px;
    transition: border 200ms linear;
}

#toolbar .toggle .invert::after {
    content: "";
    position: absolute;
    margin: -5px 0 0 30px;
    width: 5px;
    height: 5px;
    background: transparent;
    border: 5px solid white;
    border-top-left-radius: 10px;
    transition: border 200ms linear;
}

#toolbar .toggle:hover {
    background: #DFEDF6;
}

#toolbar .toggle:hover .invert::before, #toolbar .toggle:hover .invert::after {
    border-color: #DFEDF6;
}

/* Interwiki */
#interwiki {
    margin-top: 30px;
}

#interwiki .left {
    float: left;
    width: 50%;
    display: inline-block;
}

#interwiki .left .shell {
    padding-right: 100px;
}

#interwiki .mid {
    position: absolute;
    width: 200px;
    margin: 0 -100px;
    background: #BFDBEE;
    border-radius: 0 0 5px 5px;
    display: inline-block;
}

#interwiki .right {
    float: right;
    width: 50%;
    display: inline-block;
}

#interwiki .right .shell {
    padding-left: 100px;
}

#interwiki .left a, #interwiki .right a {
    width: 50%;
    padding: 20px 0;
}

#interwiki .mid a {
    width: 100%;
    padding: 25px 0;
    border-radius: 0 0 5px 5px;
    font-size: 125%;
}

#interwiki a {
    display: block;
    float: left;
    background: #BFDBEE;
    color: black;
    text-align: center;
    text-decoration: none;
    transition: background 200ms linear;
}

#interwiki a:hover {
    background: #DFEDF6;
}

#interwiki a:hover .invert::after {
    border-color: #DFEDF6;
}

#interwiki .left .shell div {
    text-align: right;
}

#interwiki .left .invert {
    position: absolute;
    width: 5px;
    height: 5px;
    margin: 20px 0 0 -5px;
    overflow: hidden;
}

#interwiki .left .invert::after {
    content: "";
    position: absolute;
    width: 5px;
    height: 5px;
    border: 5px solid #BFDBEE;  
    margin: -5px 0 0 -10px;
    border-top-right-radius: 10px;
    transition: border 200ms linear;
}

#interwiki .right .shell div {
    text-align: left;
}

#interwiki .right .invert {
    position: absolute;
    width: 5px;
    height: 5px;
    margin: 20px 0 0;
    overflow: hidden;
}

#interwiki .right .invert::after {
    content: "";
    position: absolute;
    width: 5px;
    height: 5px;
    border: 5px solid #BFDBEE;  
    margin: -5px 0 0 -5px;
    border-top-left-radius: 10px;
    transition: border 200ms linear;
}

/* Content */
#page {
    position: absolute;
    background: white;
    top: 151px;
    bottom: 0;
    left: 70px;
    right: 0;
    border-top-left-radius: 5px;
}

#page #top {
    position: absolute;
    margin-top: -33px;
    padding-left: 20px;
}

#page #top li {
    display: inline-block;
    margin: 0 5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent #BFDBEE;
    transition: border 200ms linear;
}

#page #top li:hover, #page #top li.active {
    border-color: transparent transparent white;
}

#page #top li.active a, #page #top li:hover a {
    background: white;
}

#page #top a {
    display: inline-block;
    background: #BFDBEE;
    padding: 5px 20px 0;
    border-bottom: 1px solid #BFDBEE;
    color: black;
    text-decoration: none;
    font-size: 80%;
    border-radius: 5px 5px 0 0;
    transition: background 200ms linear, border 200ms linear;
}

#page #top li:hover a, #page #top li.active a {
    border-bottom-color: white;
}

#page #left {
    position: absolute;
    margin-left: -49px;
}

